-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 5.5, 10.1, 10.2, 10.3, 10.0
-
Fix Version/s: 10.3.7
-
Component/s: Storage Engine - Federated
-
Labels:None
federated converts all literals to strings when sending them to the remote host. And remote host does the same.
For timestamp, to/from string conversions depend on the current time zone. If local and remote have different current time zones, a wrong value will be inserted. Effects:
- minimal possible, but valid, timestamp on the local host may be invalid (and not insert-able) on the remote.
- maximal possible, but valid, timestamp on the local host may be invalid (and not insert-able) on the remote.
- two distinct timestamp values may have the same string representation in some time zones (around October DST switch) and they'll be inserted as identical values on remote.
To fix first two issues, Federated must set the same time zone on remote, as it has locally. To fix the last issue, this time zone must have no DST.
- blocks
-
MDEV-15969 System versioning and FEDERATED don't work well together: DML and discovery fail
-
- Closed
-
- relates to
-
MDEV-16246 insert timestamp into spider table from mysqldump gets wrong time zone.
-
- Closed
-